--- a/FOLDER/package.json
+++ b/FOLDER/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apiai": "^4.0.3",
     "body-parser": "^1.18.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
