--- a/FOLDER/package.json
+++ b/FOLDER/package.json
@@ -25,6 +25,7 @@
     "sequelize": "^4.8.3"
   },
   "devDependencies": {
+    "@types/express": "^4.0.37",
     "@types/node": "^8.0.28",
     "ts-node": "^3.3.0",
     "tslint": "^5.7.0",
