--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "src/server.js",
     "scripts": {
         "start": "node src/server.js",
+        "heroku-postbuild": "cd assistant_director && npm install --only=dev && npm install && npm run build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
