--- a/assistant_director/package.json
+++ b/assistant_director/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "auth0-js": "^8.9.3",
+        "prop-types": "^15.5.10",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-router": "^4.2.0",
