--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "src/server.js",
     "scripts": {
-        "start": "node src/server.js",
+        "start": "node server.js",
         "heroku-postbuild": "cd assistant_director && npm install --only=dev && npm install && npm run build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
