--- a/assistant_director/package.json
+++ b/assistant_director/package.json
@@ -7,6 +7,7 @@
         "axios": "^0.16.2",
         "canvas": "^1.6.7",
         "chart.js": "^2.7.0",
+        "create-react-class": "^15.6.0",
         "lodash": "^4.17.4",
         "node-gyp": "^3.6.2",
         "prop-types": "^15.5.10",
